<resources>
    <string name="app_name">PharmLane Store</string>
    <string name="login">Login</string>
    <string name="login_txt">Login with your mobile to service online orders</string>
    <string name="mobile_num">Mobile Number</string>
    <string name="get_otp">Get Otp</string>
    <string name="dont_acc">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="verify_num">Verify Number</string>
    <string name="verify_txt1">We have sent code on</string>
    <string name="verify">Verify Store</string>
    <string name="verify_rece">Verify Receiver</string>
    <string name="resend_code">Resend Code</string>
    <string name="upload_photoid">Upload gst certificate</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="prsnl_info">Personal Information</string>
    <string name="ownr_mngr_name">Owner/ Manager Name*(self)</string>
    <string name="mobile_num_">Mobile Number (Whatsapp No.)*</string>
    <string name="provide_rights">You can provide rights to any two employees (Optional)</string>
    <string name="employee_1_nm">Employee 1 Name</string>
    <string name="employee_1_mo">Employee 1 Mobile Number (Whatsapp No.)</string>
    <string name="employee_2_nm">Employee 2 Name</string>
    <string name="employee_2_mo">Employee 2 Mobile Number (Whatsapp No.)</string>
    <string name="store_info">Store Information</string>
    <string name="store_name">Store Name*</string>
    <string name="retailer">Retailer</string>
    <string name="wholeseller">Wholesaler</string>
    <string name="gst_no">GST Number*</string>
    <string name="drug_licnc_no">Drug License Number*</string>
    <string name="merch_categry">Merchandise Category*</string>
    <string name="est_since">Est. Since</string>
    <string name="office_shop_no">Office/Shop No.</string>
    <string name="street_road">Street/Road*</string>
    <string name="area">Area*</string>
    <string name="landmark">Landmark</string>
    <string name="city">City*</string>
    <string name="zip_code">Zip Code*</string>
    <string name="geo_location">Geo Location*</string>
    <string name="select_merch_categry">Select Merchandise Category</string>
    <string name="u_can_select_max_3_category">You can select maximum 3 categories</string>
    <string name="submit">Submit</string>
    <string name="upload_drug_license">Upload Drug License</string>
    <string name="permission_required">Permission Required</string>
    <string name="my_crop">My Crop</string>
    <string name="upload_store_photo">Upload Store Photo</string>
    <string name="preferd_paymnt_method">Preferred Payment Method</string>
    <string name="upi_id">UPI ID OR MOBILE NUMBER*</string>
    <string name="cod">Cash On Delivery</string>
    <string name="txt_for_cod">(COD  is a default option. Seller has to accept payment by COD.)</string>
    <string name="txt_paymnt_option">Other Payment Options you Offer</string>
    <string name="google_pay">Google Pay</string>
    <string name="paytm">Paytm</string>
    <string name="phone_pe">Phone Pe</string>
    <string name="tnks_fr_regidtrng">Thank You For Registering.</string>
    <string name="ordr_success_txt">Our team will visit you to collect documents in the next 24 hours.</string>
    <string name="ok">ok</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="you_dont_have_any_request">You don\'t have any request</string>
    <string name="launch_demo">Launch Demo</string>
    <string name="demo_txt">A paragraph is a series of related sentences developing a central idea, called the topic.</string>
    <string name="direct_orders">Direct Orders</string>
    <string name="viewall">Viewall</string>
    <string name="pending_orders">Market Orders</string>
    <string name="offers_made">Offers Made</string>
    <string name="delivery_date">Delivery Date and Time</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="sort_by">Sort by</string>
    <string name="your_offer_accepted">Your Offer has been accepted!</string>
    <string name="txt_status_active">Active Till</string>
    <string name="custm_name">Customer Name</string>
    <string name="upload_prescri">Uploaded Prescription</string>
    <string name="prefer_schedule">Prefer Schedule</string>
    <string name="delivery_prefrnc">Delivery Preference</string>
    <string name="buying_prefrnc">Buying Preference</string>
    <string name="ordering_for">Ordering For</string>
    <string name="make_offer">Make Offer</string>
    <string name="view_offer">View Offer</string>
    <string name="You_lost_this_order">You have lost this order.</string>
    <string name="review_offer">Review Offer</string>
    <string name="delivery_time_out">Delivery Timed Out:</string>
    <string name="you_cant_make_ofer_now">You can\'t Make Offer now.</string>
    <string name="you_cant_make_delivery_now">You can\'t Make Delivery now.</string>
    <string name="active_status">Active</string>
    <string name="lost">Lost</string>
    <string name="view_order">View Order</string>
    <string name="your_offer">Your Offer</string>
    <string name="orignl_prescrption_requird">Original Prescription Required</string>
    <string name="orignl_prescrption_requird_">Original Prescription Required?</string>
    <string name="delivery_date_time">Delivery Date/Time</string>
    <string name="order_amount">Order Amount</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="mrp">MRP</string>
    <string name="txt_inclusiv_taxes">(Inclusive of all Taxes &amp; Duties)</string>
    <string name="net_bill_amount">Net Bill Amount</string>
    <string name="delivery_charges">(+) Delivery Charges</string>
    <string name="if_any">( if any )</string>
    <string name="total_amount_payable">Total Amount Payable</string>
    <string name="re_submit_offer">Re-Submit Offer</string>
    <string name="edit">Edit</string>
    <string name="view_offer_">View Offer>></string>
    <string name="buying_prefrnc_">Buying Preference:</string>
    <string name="total">Total</string>
    <string name="calculate_bill_amount">Calculate Bill Amount</string>
    <string name="set_delivery">Set Delivery</string>
    <string name="set_delivery_charge">Set Delivery Charge</string>
    <string name="tag_details">Tag Details</string>
    <string name="not_available">Not Available</string>
    <string name="available">Available</string>
    <string name="availablity">Availability</string>
    <string name="enter_mrp">Enter Mrp</string>
    <string name="product_id">Product id</string>
    <string name="rs">Rs.</string>
    <string name="qty_ordered">Qty. Ordered</string>
    <string name="reset_ur_delivry_prefrnce">re-set your delivery preferences</string>
    <string name="review_final_offer">Review Final Offer</string>
    <string name="total_bill_amount">Total Bill Amount</string>
    <string name="inc_all_tax_duties"><![CDATA[(Inclusive of all Taxes & Duties)]]></string>
    <string name="discount">Discount</string>
    <string name="buyer_delivry_prefrnce">Buyer Delivery Preference</string>
    <string name="location_delivry">Location Delivery</string>
    <string name="zip_address_delivry">Zip Address Delivery</string>
    <string name="buyer_delivery_date">Buyer Delivery Date and Time</string>
    <string name="buyer_delivery_time">Buyer Delivery Date and Time</string>
    <string name="your_delivry_prefernce">Your Delivery Preference</string>
    <string name="orignl_prescrption_not_requird">Original Prescription Not Required</string>
    <string name="only_store_delivery">Only Store Delivery</string>
    <string name="done">Done</string>
    <string name="your_delivry_date">Your Delivery Date and Time</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="to_time">Select To Time</string>
    <string name="from_time">Select From Time</string>
    <string name="select_date">Select From Date</string>
    <string name="select_to_date">Select To Date</string>
    <string name="submit_offer">Submit Offer</string>
    <string name="upload_invoice_start_delivery">Upload Invoice and Start Delivery</string>
    <string name="upload_invoice">Upload Invoice</string>
    <string name="upload">Upload</string>
    <string name="upload_img_txt">Upload an image of your Proforma Invoice</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="handover_invoice_on_delivry">Handover Invoice on Delivery</string>
    <string name="invoice_status">Proforma Invoice has been uploaded</string>
    <string name="invoice_status1">Proforma Invoice handover on Delivery</string>
    <string name="start_delivery">Start Delivery</string>
    <string name="your_delivery_time">Your Delivery Time</string>
    <string name="your_delivery_date">Your Delivery Date</string>
    <string name="your_delivery_prefrnc">Your Delivery Preference</string>
    <string name="only_store_pickup">Only Store Pickup</string>
    <string name="accepted">Accepted</string>
    <string name="rate_custmr">Rate Customer</string>
    <string name="view_order_summary">View Order</string>
    <string name="call">Call</string>
    <string name="rate_ur_expi">Rate your Experience</string>
    <string name="bad">Bad</string>
    <string name="meh">Meh</string>
    <string name="nice">Nice</string>
    <string name="good">Good</string>
    <string name="great">Great</string>
    <string name="write_ur_review">Write your Review</string>
    <string name="submit_review">Submit Review</string>
    <string name="my_rating">My Rating</string>
    <string name="invoiced">Invoiced</string>
    <string name="customr_details">Customer Details</string>
    <string name="order_success_msg">Order has been successfully delivered to Customer!</string>
    <string name="verify_receivr">Verify Receiver</string>
    <string name="mode_of_payment">Mode of Payment</string>
    <string name="amount_received">Amount Received</string>
    <string name="enter_mobilenumber">Enter Mobile Number</string>
    <string name="enter_valid_number">Enter Valid Mobile Number</string>
    <string name="enter_valid_otp">Enter Valid Otp</string>
    <string name="verify_paymnt">Verify Payment</string>
    <string name="send_otp">Send Otp</string>
    <string name="verification">Verification</string>
    <string name="payment">Payment</string>
    <string name="delivered">Delivery</string>
    <string name="enter_valid_detail">Enter Valid Detail</string>
    <string name="enter_store_name">Enter Store Name</string>
    <string name="enter_gst_no">Enter Gst Number</string>
    <string name="enter_drug_lic_no">Enter Drug License Number</string>
    <string name="enter_merch_categry">Enter Merchandise Category</string>
    <string name="enter_street_road">Enter Street Road</string>
    <string name="enter_area">Enter Area</string>
    <string name="select_type">Select Type</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_zip_code">Enter Zip Code</string>
    <string name="enter_geo_location">Enter Geo Location</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="on_credit">On Credit</string>
    <string name="confirm">Confirm</string>
    <string name="note_">Note:</string>
    <string name="note_txt">You can offer less than Ordered Quantity</string>
    <string name="pri_note_txt_1">You cannot offer more than Prescription Quantity</string>
    <string name="rs_">₹</string>
    <string name="total_mrp">Total Mrp</string>
    <string name="qty_avail">Qty. Available</string>
    <string name="order_qty_avail">Order Qty. Available?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="less">Less</string>
</resources>