<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_rs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:fontFamily="@font/circularstd_book"
        android:text="@string/rs_"
        android:textAllCaps="true"
        android:textColor="@color/black_txt"
        android:textSize="@dimen/sp_15"
        app:layout_constraintBaseline_toBaselineOf="@+id/total_mrp"
        app:layout_constraintEnd_toStartOf="@+id/edt_rs" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/bg_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_productid" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/qty_avail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_20"
        android:fontFamily="@font/circularstd_book"
        android:text="@string/qty_avail"
        android:textColor="@color/grey_txt"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView125"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_qty_avail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:background="@drawable/custom_status"
        android:backgroundTint="@color/bg_color"
        android:fontFamily="@font/circularstd_book"
        android:inputType="number"
        android:paddingStart="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_15"
        android:hint="0"
        android:singleLine="true"
        android:textColor="@color/black_txt"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBaseline_toBaselineOf="@+id/qty_avail"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/total_mrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_24"
        android:fontFamily="@font/circularstd_book"
        android:text="@string/total_mrp"
        android:textAllCaps="true"
        android:textColor="@color/black_txt"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qty_avail" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_clr"
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_20"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="@dimen/dp_8"
        android:src="@drawable/custom_color_code"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/textView55"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_rs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:background="@drawable/custom_status"
        android:backgroundTint="@color/bg_color"
        android:fontFamily="@font/circularstd_book"
        android:inputType="numberDecimal"
        android:paddingStart="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_15"
        android:hint="0.00"
        android:singleLine="true"
        android:textColor="@color/black_txt"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_rs"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_16"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/close" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="59dp"
        android:fontFamily="@font/circularstd_book"
        android:text="@string/qty_ordered"
        android:textColor="@color/grey_txt"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:fontFamily="@font/circularstd_medium"
        android:text=""
        android:textColor="@color/black_txt"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView125"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/dp_24"
        android:fontFamily="@font/circularstd_book"
        android:gravity="start"
        android:text="@string/order_qty_avail"
        android:textColor="@color/grey_txt"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/textView125"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView125">

        <RadioButton
            android:id="@+id/radio_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_8"
            android:checked="true"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/radio_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_8"
            android:text="@string/no" />

        <RadioButton
            android:id="@+id/radio_less"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/less" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/circularstd_medium"
        android:text="@string/product_id"
        android:textAllCaps="true"
        android:textColor="@color/grey_txt"
        android:textSize="@dimen/sp_13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_productid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/circularstd_medium"
        android:text=""
        android:textColor="@color/black_txt"
        android:textSize="@dimen/sp_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView55"
        app:layout_constraintTop_toBottomOf="@+id/textView55" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView128"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/circularstd_book"
        android:text="@string/note_"
        android:textAllCaps="true"
        android:textColor="@color/grey_txt"
        android:textSize="@dimen/sp_13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_mrp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/circularstd_book"
        android:text="@string/note_txt"
        android:textColor="@color/grey_txt"
        android:textSize="@dimen/sp_13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView128" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@color/colorofWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_note"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_confrm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circularstd_medium"
            android:gravity="center"
            android:padding="@dimen/dp_12"
            android:text="@string/confirm"
            android:textAllCaps="true"
            android:textColor="@color/reg_txt"
            android:textSize="@dimen/sp_15"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>