<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg_set_delivery"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_24"
        android:fontFamily="@font/circularstd_medium"
        android:text="@string/your_delivry_date"
        android:textAllCaps="true"
        android:textColor="@color/grey_txt"
        android:textSize="@dimen/sp_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_16"
        android:padding="@dimen/dp_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/setdelivery_close" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_from"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_16"
        android:fontFamily="@font/circularstd_book"
        android:text="@string/from"
        android:visibility="gone"
        android:textColor="@color/grey_txt"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toStartOf="@+id/txt_to"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_to"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_16"
        android:fontFamily="@font/circularstd_book"
        android:text="@string/to"
        android:visibility="gone"
        android:textColor="@color/grey_txt"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_from"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_to_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:background="@drawable/custom_status"
        android:backgroundTint="@color/colorofWhite"
        android:drawableEnd="@drawable/set_delivery_date"
        android:fontFamily="@font/circularstd_book"
        android:padding="@dimen/dp_10"
        android:hint="@string/select_to_date"
        android:textColor="@color/black_txt"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toStartOf="@+id/txt_to_time"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_from" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_to_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:background="@drawable/custom_status"
        android:backgroundTint="@color/colorofWhite"
        android:drawableEnd="@drawable/setdelivery_greyclock"
        android:fontFamily="@font/circularstd_book"
        android:padding="@dimen/dp_10"
        android:hint="@string/to_time"
        android:textColor="@color/black_txt"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_to_date"
        app:layout_constraintTop_toBottomOf="@+id/txt_to" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@color/grey_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_to_time" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_done"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/circularstd_bold"
        android:gravity="center"
        android:padding="@dimen/dp_16"
        android:text="@string/done"
        android:textAllCaps="true"
        android:textColor="@color/green_txt"
        android:textSize="@dimen/sp_15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>