<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg_set_delivery"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_24"
        android:fontFamily="@font/circularstd_medium"
        android:text="@string/your_delivry_prefernce"
        android:textAllCaps="true"
        android:textColor="@color/grey_txt"
        android:textSize="@dimen/sp_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_16"
        android:padding="@dimen/dp_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/setdelivery_close" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <RadioButton
            android:id="@+id/radio_store_picup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/circularstd_book"
            android:text="@string/only_store_pickup"
            android:layout_marginStart="@dimen/dp_16"
            android:checked="true"
            android:textColor="@drawable/radio_delvry_prefrnce"
            android:textSize="@dimen/sp_16" />

        <RadioButton
            android:id="@+id/radio_location_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_10"
            android:fontFamily="@font/circularstd_book"
            android:text="@string/location_delivry"
            android:textColor="@drawable/radio_delvry_prefrnce"
            android:textSize="@dimen/sp_16" />
    </RadioGroup>


    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="55dp"
        android:background="@color/grey_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_done"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/circularstd_bold"
        android:text="@string/done"
        android:textAllCaps="true"
        android:textColor="@color/green_txt"
        android:textSize="@dimen/sp_15"
        android:gravity="center"
        android:padding="@dimen/dp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>